Fix deployment issues: Update build script and add comprehensive deployment documentation
- Fixed package.json build script to use 'npm install' instead of 'npm ci' to include devDependencies (vite)
- Added terser dependency to frontend/package.json for production builds
- Updated QUICK_DEPLOY_COMMANDS.md with correct Render deployment commands
- Created comprehensive deployment documentation and error analysis
- Verified all components working: frontend build, backend Flask app, MongoDB connection, ML models
- Ready for successful Render deployment

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Full-stack Stock Analyzer application for Render deployment",
   "scripts": {
-    "build": "cd frontend && npm ci && npm run build",
+    "build": "cd frontend && npm install && npm run build",
     "start": "cd backend && python app.py",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && python app.py",
@@ -14,8 +14,9 @@
     "test": "echo 'No tests specified'",
     "clean": "rm -rf frontend/dist && rm -rf backend/__pycache__"
   },
-  "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "terser": "^5.43.1"
+  },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0",
