--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.2.0",
+    "terser": "^5.0.0",
     "vite": "^7.1.2"
   },
   "scripts": {
