Optimize deployment: Remove heavy dependencies causing build timeouts
- Removed TensorFlow and statsmodels from requirements.txt (causing build failures)
- Pinned package versions to ensure consistent builds with pre-built wheels
- Added pip.conf for build optimization (prefer-binary, timeouts)
- Updated build script with --prefer-binary and timeout flags
- ML code already has fallback handling for missing TensorFlow
- App will run with core ML features (scikit-learn) and basic stock analysis
- Can add TensorFlow back later after successful initial deployment

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Full-stack Stock Analyzer application for Render deployment",
   "scripts": {
-    "build": "cd frontend && npm install --include=dev && npm run build",
+    "build": "cd frontend && npm install --include=dev && npm run build && cd ../backend && pip install --prefer-binary --timeout 300 --no-cache-dir -r requirements.txt",
     "start": "cd backend && python app.py",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && python app.py",
